--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="lib/masonry.min.js"></script>
   <script src="http://maps.google.com/maps/api/js?v=3.8&amp;sensor=false&amp;key=&amp;libraries=places&amp;language=zh_cn&amp;hl=&amp;region=" type="text/javascript"></script>
 </head>
-<body>
+<body class="custom-scrollbar custom-scrollbar-large">
   <div class="nav" ng-controller="NavCtrl" ng-hide="hideNav">
     <!-- <div class="logo left"><img src="img/text-logo.png" />Travel Marks</div> -->
     <div class="logo logo-v2 left" ><img src="img/logo-white.png"></div>
