--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>TravelMarks</title>
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/flat-ui.css" />
-  <link rel="stylesheet" href="css/app.css" />
+  <!--<link rel="stylesheet" href="css/flat-ui.css" />
+  <link rel="stylesheet" href="css/app.css" />-->
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-  <!--<link rel="stylesheet" href="application.css" />-->
+  <link rel="stylesheet" href="application.css" />
   <script type="text/javascript" src="lib/jquery.min.js"></script>
   <!--<script type="text/javascript" src="lib/binaryajax.js"></script>
   <script type="text/javascript" src="lib/exif.js"></script>
@@ -268,13 +268,13 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
   <script src="lib/angular/angular.min.js"></script>
-  <script src="js/app.js"></script>
+  <!--<script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js" charset='utf-8'></script>
   <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
+  <script src="js/directives.js"></script>-->
   <script src="lib/angular/angular-sanitize.min.js"></script>
-  <!--<script type="text/javascript" src="application.js"></script>-->
+  <script type="text/javascript" src="application.js"></script>
   <script type="text/javascript" src="lib/angular/angular-cookies.min.js"></script>
 </body>
 </html>
