--- a/public/index.html
+++ b/public/index.html
@@ -71,10 +71,13 @@
           <div class="control-box">
             <div class="control-btn"></div>
             <div class="control-box-btns">
-              <div ng-click="modeSwitch('large')">Large</div>
-              <div ng-click="modeSwitch('middle')">Middle</div>
-              <div ng-click="modeSwitch('small')">Small</div>
-              <div ng-click="modeSwitch('list')">List</div>
+              <div class="up-triangle"></div>
+              <div class="btns-wrap">
+                <div ng-click="modeSwitch('large')">Large</div>
+                <div ng-click="modeSwitch('middle')">Middle</div>
+                <div ng-click="modeSwitch('small')">Small</div>
+                <div ng-click="modeSwitch('list')">List</div>
+              </div>
             </div>
           </div>
           <a href="#upload"><button class="btn">Create a New Mark</button></a>
