--- a/public/index.html
+++ b/public/index.html
@@ -235,6 +235,7 @@
           /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
           var disqus_shortname = 'travelmarks'; // required: replace example with your forum shortname
           var disqus_identifier = 'newidentifier';
+          var disqus_url = 'http://www.example.com';
 
           /* * * DON'T EDIT BELOW THIS LINE * * */
           (function() {
