--- a/public/index.html
+++ b/public/index.html
@@ -205,7 +205,7 @@
             <div class="buttons">
               <div title="Edit" class="edit" ng-click="edit()" ng-show="editable">✎</div>
               <div title="Delete" class="remove" ng-click="remove()" ng-show="editable"><i class="icon-white icon-remove"></i></div>
-              <div title="Like" class="collect">❤<span ng-bind-template="{{likes|shortNumber}}"></span></div>
+              <div title="Like" ng-class="ifLiked()" ng-click="likeMark()" class="collect">❤<span ng-bind-template="{{like_count|shortNumber}}"></span></div>
               <div title="Switch display mode" class="mode" ng-click="switchMode()"></div>
             </div>
           </div>
@@ -230,22 +230,6 @@
       </div>
 
       <section class="detail-comment">
-        <div id="disqus_thread"></div>
-        <script type="text/javascript">
-          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-          var disqus_shortname = 'travelmarks'; // required: replace example with your forum shortname
-          var disqus_identifier = 'newidentifier';
-          var disqus_url = 'http://www.example.com';
-
-          /* * * DON'T EDIT BELOW THIS LINE * * */
-          (function() {
-              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-          })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
       </section>
           
     </div>
