--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="lib/md5.js"></script>!-->
   <script type="text/javascript" src="lib.min.js"></script>
   <script type="text/javascript" src="lib/masonry.min.js"></script>
-  <script src="http://maps.google.com/maps/api/js?v=3.8&amp;sensor=false&amp;key=&amp;libraries=places&amp;language=zh_cn&amp;hl=&amp;region=" type="text/javascript"></script>
+
 </head>
 <body class="custom-scrollbar custom-scrollbar-large">
   <div class="nav" ng-controller="NavCtrl" ng-hide="hideNav">
@@ -82,7 +82,7 @@
           </div>
           <a href="#upload"><button class="btn">Create a New Mark</button></a>
         </div>
-        <div class="desc left"><span class="big-num" ng-bind-template="{{totalMarks}}">0</span> <span ng-pluralize count="totalMarks" when="{'0': 'oops, no mark available', '1': 'mark', 'other': 'marks'}">marks</span> and <span class="big-num" ng-bind-template="{{totalPictures}}">0</span> <span ng-pluralize count="totalPictures" when="{'0': ': ( you have not uploaded pictures yet.', '1': 'picture', 'other': 'pictures'}">pictures.</span></div>
+        <div class="desc left"><span class="big-num" ng-bind-template="{{totalMarks}}">0</span> <span ng-pluralize count="totalMarks" when="{'0': 'mark ', '1': 'mark', 'other': 'marks'}">marks</span> and <span class="big-num" ng-bind-template="{{totalPictures}}">0</span> <span ng-pluralize count="totalPictures" when="{'0': 'picture. : ( you have not uploaded pictures yet.', '1': 'picture', 'other': 'pictures'}">pictures.</span></div>
         <div class="clear"></div>
       </div>
     </div>
@@ -93,7 +93,8 @@
         </div>
         
         <div class="marks-container">
-          <div class="mark" ng-repeat="mark in marks" ng-click="goTo(mark._id)">
+          <div class="mark" ng-repeat="mark in marks" >
+          <a href="#detail/{{mark._id}}">
             <div class="mark-cover-1"><div class="cover" ng-style="{'background-image': 'url(' + mark.cover + ')'}"></div></div>
             <div class="mark-cover-2"><div class="cover" ng-style="{'background-image': 'url(' + mark.cover + ')'}"></div></div>
             <div class="desc">
@@ -107,6 +108,7 @@
               <br />
               
             </div>
+          </a>
           </div>
         </div><!-- /.marks-container -->
       </div>
@@ -179,7 +181,7 @@
             <div class='it-post-box'><textarea auto-height-textarea ng-model='it.post' class='it-post custom-scrollbar' placeholder='This is...' ></textarea></div>
           </li>
         </ul>
-        <button class='btn btn-info' ng-click='addMore()'>Upload More</button>
+        <button class='btn btn-info' ng-click='addMore()'>Add a Site</button>
         <button class='btn btn-success' ng-click='save()'>Save</button>
       </div>
     </div>
@@ -210,7 +212,7 @@
             </div>
           </div>
           <div class="clear"></div>
-          <div class="summary" ng-bind-template="{{summary}}"></div>
+          <div class="summary pre-line" ng-bind-template="{{summary}}"></div>
         </div>
         <br />
         <ul class="item-box" ng-class="getMode()">
@@ -224,7 +226,7 @@
             <div ng-repeat="pic in it.pictures" ng-class="ifLoad($parent.$index, $index)" class="it-pic-container">
               <img ng-src="{{pic.src}}" />
             </div>
-            <div class="it-post" ng-bind-template="{{it.post}}" ></div>
+            <div class="it-post pre-line" ng-bind-template="{{it.post}}" ></div>
           </li>
         </ul>
       </div>
