--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
   <!--<link rel="stylesheet" href="css/flat-ui.css" />
   <link rel="stylesheet" href="css/app.css" />-->
-  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="application.css" />
   <script type="text/javascript" src="lib/jquery.min.js"></script>
   <!--<script type="text/javascript" src="lib/binaryajax.js"></script>
